# ps4eye

./: .gitignore  CMakeLists.txt  P-09:28:2015-17:03:32.pnm  P-09:28:2015-17:03:40.pnm  README.md  TODO.txt  build.sh  install.sh
root/: CMakeLists.txt  install.sh
root/resource/: extrinsics_small.yml  intrinsics_small.yml
root/sample/: CMakeLists.txt  main.cpp  ps4eye_calib.cpp  ps4eye_calib2.cpp  ps4eye_stereo.cpp  ps4eye_test.cpp  stereo_calib.cpp  stereo_calibre_2.cpp  stereo_test.cpp
root/src/: CMakeLists.txt  DeviceUtils.cpp  DeviceUtils.h  PS4eye.cpp  PS4eye.h  V4LTools.cpp  V4LTools.h
root/src/v4ltool/: CMakeLists.txt  avilib.c  avilib.h  button.h  color.c  color.h  dynctrl-logitech.h  gui.c  gui.h  huffman.h  luvcview.c  test.cpp  utils.c  utils.h  uvc_compat.h  uvcvideo.h  v4l2uvc.c  v4l2uvc.h
root/test/: CMakeLists.txt  DeviceUtils_test.cpp  PS4eye_test.cpp  V4LTools_test.cpp
